--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "https": "^1.0.0",
+    "node-fetch": "^2.6.0",
     "smee-client": "^1.1.0",
     "ws": "^7.1.2"
   }
