Add logic to load certificates from LetsEncrypt provided by certbot

--- a/env.example
+++ b/env.example
@@ -1,2 +1,8 @@
+# For production only
+PORT=443
+CA_PATH="/etc/letsencrypt/.../chain.pem"
+CERT_PATH="/etc/letsencrypt/.../cert.pem"
+KEY_PATH="/etc/letsencrypt/.../privkey.pem"
+
 WEBHOOK_URL="<SMEE.IO-URL-HERE>"
 WEBHOOK_SECRET="<WEBHOOK-SECRET-HERE>"
