--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@ PORT=443
 CA_PATH="/etc/letsencrypt/.../chain.pem"
 CERT_PATH="/etc/letsencrypt/.../cert.pem"
 KEY_PATH="/etc/letsencrypt/.../privkey.pem"
-
+# For development only
 WEBHOOK_URL="<SMEE.IO-URL-HERE>"
+
 WEBHOOK_SECRET="<WEBHOOK-SECRET-HERE>"
