--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "express": "^4.17.1",
     "https": "^1.0.0",
     "node-fetch": "^3.1.1",
-    "smee-client": "^1.0.1",
     "ws": "^7.4.6"
+  },
+  "devDependencies": {
+    "smee-client": "^1.0.1"
+  },
+  "overrides": {
+    "smee-client": {
+      "eventsource": "^2.0.2"
+    }
   }
 }
